AutoLayout 	-> added 2 images 	-> added labels

--- a/BabyNames/Base.lproj/Main.storyboard
+++ b/BabyNames/Base.lproj/Main.storyboard
@@ -1,26 +1,120 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BabyNames" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MQB-gs-mYI">
+                                <rect key="frame" x="318" y="0.0" width="250" height="320"/>
+                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chinese baby small" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-8m-JKc">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="orX-ho-DhW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular Baby Names" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZwC-Io-o7Z">
+                                <rect key="frame" x="160.5" y="40" width="247" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sophia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IH8-bb-Mp0">
+                                <rect key="frame" x="160" y="110" width="62.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jackson" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rvR-yh-dem">
+                                <rect key="frame" x="332" y="100" width="75" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emma" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHo-jS-Bq7">
+                                <rect key="frame" x="160" y="174" width="56.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Olivia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8y-x6-3HC">
+                                <rect key="frame" x="160" y="238" width="50" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aiden" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5N-dE-C9i">
+                                <rect key="frame" x="355.5" y="154" width="52" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lucas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRA-Ir-Udq">
+                                <rect key="frame" x="353.5" y="208" width="54" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Liam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DN0-BM-cnT">
+                                <rect key="frame" x="364" y="262" width="43.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DN0-BM-cnT" firstAttribute="trailing" secondItem="PRA-Ir-Udq" secondAttribute="trailing" id="5sR-gD-dkO"/>
+                            <constraint firstItem="y8y-x6-3HC" firstAttribute="leading" secondItem="FHo-jS-Bq7" secondAttribute="leading" id="9FG-Us-Raa"/>
+                            <constraint firstItem="FHo-jS-Bq7" firstAttribute="top" secondItem="IH8-bb-Mp0" secondAttribute="bottom" constant="40" id="AXP-7q-Kjd"/>
+                            <constraint firstItem="PRA-Ir-Udq" firstAttribute="trailing" secondItem="q5N-dE-C9i" secondAttribute="trailing" id="FgV-CR-gQ9"/>
+                            <constraint firstAttribute="trailing" secondItem="MQB-gs-mYI" secondAttribute="trailing" id="G93-x2-q9D"/>
+                            <constraint firstItem="q5N-dE-C9i" firstAttribute="top" secondItem="rvR-yh-dem" secondAttribute="bottom" constant="30" id="GB1-gg-HBs"/>
+                            <constraint firstItem="KTD-8m-JKc" firstAttribute="top" secondItem="MQB-gs-mYI" secondAttribute="top" id="Im1-2u-i1I"/>
+                            <constraint firstItem="KTD-8m-JKc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NO4-um-Nqy"/>
+                            <constraint firstItem="q5N-dE-C9i" firstAttribute="trailing" secondItem="rvR-yh-dem" secondAttribute="trailing" id="Nok-n0-Iqf"/>
+                            <constraint firstItem="y8y-x6-3HC" firstAttribute="top" secondItem="FHo-jS-Bq7" secondAttribute="bottom" constant="40" id="Oyw-dw-I2a"/>
+                            <constraint firstItem="FHo-jS-Bq7" firstAttribute="leading" secondItem="IH8-bb-Mp0" secondAttribute="leading" id="Prb-KH-YJ6"/>
+                            <constraint firstItem="ZwC-Io-o7Z" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="PvB-vP-DSV"/>
+                            <constraint firstItem="IH8-bb-Mp0" firstAttribute="leading" secondItem="ZwC-Io-o7Z" secondAttribute="leading" id="Qhk-3P-t2l"/>
+                            <constraint firstItem="rvR-yh-dem" firstAttribute="top" secondItem="ZwC-Io-o7Z" secondAttribute="bottom" constant="30" id="RAX-vq-izq"/>
+                            <constraint firstItem="KTD-8m-JKc" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Rn7-Zz-ngg"/>
+                            <constraint firstItem="MQB-gs-mYI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="e6t-sf-pOL"/>
+                            <constraint firstItem="ZwC-Io-o7Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ehd-fS-MmN"/>
+                            <constraint firstItem="rvR-yh-dem" firstAttribute="trailing" secondItem="ZwC-Io-o7Z" secondAttribute="trailing" id="kJC-Ek-PyW"/>
+                            <constraint firstItem="PRA-Ir-Udq" firstAttribute="top" secondItem="q5N-dE-C9i" secondAttribute="bottom" constant="30" id="paa-QU-raS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MQB-gs-mYI" secondAttribute="bottom" id="pjL-aQ-vQP"/>
+                            <constraint firstItem="KTD-8m-JKc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rni-RW-u6p"/>
+                            <constraint firstItem="DN0-BM-cnT" firstAttribute="top" secondItem="PRA-Ir-Udq" secondAttribute="bottom" constant="30" id="u35-Tg-iFK"/>
+                            <constraint firstItem="IH8-bb-Mp0" firstAttribute="top" secondItem="ZwC-Io-o7Z" secondAttribute="bottom" constant="40" id="vgJ-NK-qYH"/>
+                            <constraint firstItem="MQB-gs-mYI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="318" id="xip-7i-AzP"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.25" y="130.98591549295776"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chinese baby small" width="300" height="360"/>
+    </resources>
 </document>
